// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoyAV kDzQIF"
>
  <li
    className="sc-fzqBZW kXNcVR"
  >
    <span
      className="sc-AxheI cEPNqp"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqBZW kXNcVR"
  >
    <span
      className="sc-AxheI cEPNqp"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqBZW kXNcVR"
  >
    <span
      className="sc-AxheI cEPNqp"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoyAV kDzQIF"
>
  <li
    className="sc-fzqBZW sc-fzqNJr gOYJmb"
  >
    <span
      className="sc-AxheI cEPNqp"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqBZW sc-fzqNJr gOYJmb"
  >
    <span
      className="sc-AxheI cEPNqp"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqBZW sc-fzqNJr gOYJmb"
  >
    <span
      className="sc-AxheI cEPNqp"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
